--- a/style.css
+++ b/style.css
@@ -216,3 +216,13 @@ nav.open ~ .overlay {
     font-size:20px;
   }
 }
+
+
+
+
+.impress {
+  color: white;
+  padding: 10px;
+  position: absolute;
+  bottom: 0px;
+}
