--- a/style.css
+++ b/style.css
@@ -221,8 +221,5 @@ nav.open ~ .overlay {
 
 
 .impress {
-  color: white;
-  padding: 10px;
-  position: absolute;
-  bottom: 0px;
+  color: white; padding: 10px; position: absolute; bottom: 0px;
 }
