--- a/sites/about/style.css
+++ b/sites/about/style.css
@@ -42,7 +42,7 @@ nav .logo {
   font-weight: 500;
 }
 nav .sidebar {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: -100%;
   height: 100%;
@@ -122,6 +122,7 @@ nav.open ~ .overlay {
     height: auto;
     padding-bottom: 20px;
     margin: 15px;
+    position: relative;
 }
 .card {
     width: 90%;
